kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx

spec:
  replicas: 1

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: nginx:1.29

          ports:
            - containerPort: 80

          volumeMounts:
            - name: nginx-storage
              mountPath: /usr/share/nginx/data

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

      volumes:
        - name: nginx-storage
          persistentVolumeClaim:
            claimName: nginx-pvc
