kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx

spec:
  type: NodePort

  selector:
    app: nginx

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30259
